--- a/modules/productextraflags/views/css/front.css
+++ b/modules/productextraflags/views/css/front.css
@@ -1,5 +1,4 @@
 .product-flag-extra{
-    top:38px;
     height: 410px;
 }
 .extra-flag-img {
@@ -7,7 +6,8 @@
 }
 
 .top-left {
-
+    top: 40px;
+    position: relative;
 }
 
 .top-right {
